frontend/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
@import "tailwindcss";
@plugin "daisyui" {
    themes: light --default, dark --prefersdark;
}

@plugin "daisyui/theme" {
    name: "dark";
    --color-primary: #1d70b8;
    --color-secondary: white;
    --color-accent: #99a1af;
}

@plugin "daisyui/theme" {
    name: "light";
    default: true;
    --color-primary: #1d70b8;
    --color-secondary: black;
    --color-accent: #6d6d6d;
    --color-base-100: #f5f7fa;
    --color-base-200: #f3f4f6;
    --color-base-300: #dce0e3;
}
  

:root {
    --main-blue-1: #588ec5;
    --main-blue-2: #1d70b8;
}

* {
    font-family: "Outfit", sans-serif;
}

.emoji-picker {
    position: absolute !important;
    right: 155px;
    bottom: 75px;
}

